1) right align style 2) column type fix

--- a/app/assets/stylesheets/transam_core/table-library/styles.css
+++ b/app/assets/stylesheets/transam_core/table-library/styles.css
@@ -383,3 +383,7 @@
 .drilldown-link::after:hover {
     top: .175em
 }
+
+.right-align .cell-text{
+    text-align: right;
+}
